@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-28T01:15:21Z",
+  "timestamp" : "2022-05-28T08:20:14Z",
   "count_outdated" : 295,
   "uniques_outdated" : 162,
-  "count" : 324,
+  "count" : 323,
   "uniques" : 181,
   "clones" : [
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
+      "count": 2,
+      "count_minmax": [ 2, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
