@@ -1,10 +1,10 @@
 {
-  "count": 29,
+  "count": 28,
   "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
